samples/_failures_safe/1761244848_4a8c8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85d84600.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_85d84600.c:164:12: error: missing terminating " character
  164 |     printf("Total vowels: %d\n
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_85d84600.c:164:5: error: expected expression at end of input
  164 |     printf("Total vowels: %d\n
      |     ^~~~~~
./samples/SAFE/__tmp_85d84600.c:164:5: error: expected declaration or statement at end of input
